# CPMel

./: .gitignore  Makefile  README.md  README.rst  build.py  doc.bat  moves.txt  pyproject.toml  setup.py
CPCLI/: __init__.py  moves.py
CPMEL/: __init__.py  build.bat  build.py  doc.bat  moves.txt
CPMEL/CPCLI/: __init__.py  copy.py  group.py  moves.py  newmoves.py  utils.py
CPMEL/CPCLI/group/: __init__.py
CPMEL/src/: test.py
CPMEL/src/CPMel/: __init__.py  initializeMaya.py
CPMEL/src/CPMel_Form/: __init__.py  __test_src.py
Clean/CPMel_Exp/: __init__.py
Clean/CPMel_Form/: _item.py  core.py  item.py
Clean/FKTool/: __init__.py  gui.py  tool.py
Clean/FKTool/FK/: FK.py  __init__.py
Clean/impo/: __init__.py
Clean/impo/CPMel/: initializeMaya.py
Clean/impo/ts1/: ts3.py
Clean/ta/: __init__.py
doc/source/: conf.py  contents.rst  index.rst
doc/source/cpmel/: CPMel.cmds.melproc.rst  CPMel.cmds.node.rst  CPMel.cmds.rst  CPMel.event.rst  modules.rst
old/: doc.bat  moves.txt
old/CPCLI/: newmoves.py
old/doc/source/: conf.py
scripts/: init_dev_env.py
scripts/cpmel_test/: __init__.py  compatible_with_pymel.py  mel.py  object_types.py
src/CPMel/: __init__.py  _args_conv.py  _mel.py  cmds.py  cmds.pyi  exc.py  object_types.py  versions.py
src/CPMel/_command/: __init__.py  build_new_func.py  commands.py
src/CPMel/_object_types/: __init__.py  core.py  other.py
src/CPMel/api/: OpenMaya.py  OpenMayaFX.py  OpenMayaMPx.py  OpenMayaRender.py  __ALL.py  __OpenMayaUI__.py  __OpenMayaUI_array__.py  __OpenMaya__.py  __OpenMaya_array__.py  __init__.py  (+2 more)
(+124 files in other folders)
