[build-system]
requires = [
    "setuptools>=24",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cpmel"
version = "3.7.0"
description = "一个现代的maya python库"
readme = "README.md"
authors = [
    { name = "cpcgskill", email = "cpcgskill@outlook.com" }
]
license = { text = "Apache Software License (Apache 2.0)" }
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
dependencies = [
    "cpapi==1.0.*",
    "cpref==1.1.*",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/cpcgskill/cpmel"
"Bug Tracker" = "https://github.com/cpcgskill/cpmel/issues"

[tool.setuptools.packages.find]
where = ["src"]
